--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.4",
-    "bootstrap": "^4.0.0-alpha.6",
+    "angular-font-awesome": "^3.1.2",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.3.3",
     "tether": "^1.4.5",
     "tslib": "^1.9.0",
